# terraform-aws-msk-to-athena

./: .gitignore  Dockerfile  README.md  athena.tf  glue.tf  lambda.tf  main.tf  outputs.tf  s3.tf  variables.tf  version.tf
examples/: main.tf
msk2s3/: __init__.py  converters.py  decoders.py  kafka_event.py  pyproject.toml  uploaders.py
msk2s3/tests/: test_converters.py  test_decoders.py  test_kafka_event.py
